@@ -190,6 +190,7 @@ class FileDeleteForm {
 			$page = WikiPage::factory( $title );
 			$dbw = wfGetDB( DB_MASTER );
 			try {
+				$dbw->startAtomic( __METHOD__ );
 				// delete the associated article first
 				$error = '';
 				$deleteStatus = $page->doDeleteArticleReal( $reason, $suppress, 0, false, $error, $user );
@@ -198,11 +199,15 @@ class FileDeleteForm {
 				if ( $deleteStatus->isOK() ) {
 					$status = $file->delete( $reason, $suppress, $user );
 					if ( $status->isOK() ) {
-						$dbw->commit( __METHOD__ );
 						$status->value = $deleteStatus->value; // log id
+						$dbw->endAtomic( __METHOD__ );
 					} else {
+						// Page deleted but file still there? rollback page delete
 						$dbw->rollback( __METHOD__ );
 					}
+				} else {
+					// Done; nothing changed
+					$dbw->endAtomic( __METHOD__ );
 				}
 			} catch ( Exception $e ) {
 				// Rollback before returning to prevent UI from displaying
